gcc/testsuite/rust/rustc/ui/parser/trait-pub-assoc-ty.rs
trait Foo {
    pub type Foo;
// { dg-error ".E0449." "" { target *-*-* } .-1 }
}

fn main() {}

